syntax = "proto3";

import "google/protobuf/empty.proto";

package article;

option go_package = "/article";

service ArticleService {
  rpc getArticles(google.protobuf.Empty) returns (GetArticlesResponse);
  rpc createArticle(CreateArticleParam) returns (ArticleId);
  rpc deleteArticle(ArticleId) returns (google.protobuf.Empty);
}

message Article {
  string id = 1;
  string title = 2;
  string description = 3;
}

message GetArticlesResponse {
  repeated Article articles = 1;
}

message CreateArticleParam {
  string title = 1;
  string description = 2;
}

message ArticleId {
  string value = 1; 
}
