syntax = "proto3";

import "google/protobuf/empty.proto";

package article;

option go_package = "/article";

service ArticlePageService {
  rpc addPage(AddPageParam) returns (PageId);
  rpc deletePage(PageId) returns (google.protobuf.Empty);
}

message PageId {
  string value = 1;
}

message AddPageParam {
  string document_id = 1;
  optional string prev_page_id = 2;
  optional string next_page_id = 3;
}
